@@ -3,6 +3,7 @@
 	* tests/test-pokertable.py.in
 	(PokerTableTestCase.test08_player_has_trouble_joining): Added test
 	for two kick attempts in a row.
+	(PokerTableTestCase.test13_disconnect): Wrote function.
 
 2008-01-20  Bradley M. Kuhn  <bkuhn@ebb.org>
 
